versioned_docs/version-2.8/reference/goals/dependencies.mdx
---
title: dependencies
description: |
  List the dependencies of the input files/targets.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

```
pants dependencies [args]
```

List the dependencies of the input files/targets.

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[dependencies]`</span>

<span className={styles.options}>

## Basic options

### `closed`

<Option
  cli_repr={`--[no-]dependencies-closed`}
  env_repr='PANTS_DEPENDENCIES_CLOSED'
  toml_repr={`[dependencies]
closed = <bool>`}
  default_repr={`False`}
>

Include the input targets in the output, along with the dependencies.

</Option>

### `output_file`

<Option
  cli_repr={`--dependencies-output-file=<path>`}
  env_repr='PANTS_DEPENDENCIES_OUTPUT_FILE'
  toml_repr={`[dependencies]
output_file = <path>`}
  default_repr={`None`}
>

Output the goal&#x27;s stdout to this file. If unspecified, outputs to stdout.

</Option>

### `sep`

<Option
  cli_repr={`--dependencies-sep=<separator>`}
  env_repr='PANTS_DEPENDENCIES_SEP'
  toml_repr={`[dependencies]
sep = <separator>`}
  default_repr={`\\n`}
>

String to use to separate lines in line-oriented output.

</Option>

### `transitive`

<Option
  cli_repr={`--[no-]dependencies-transitive`}
  env_repr='PANTS_DEPENDENCIES_TRANSITIVE'
  toml_repr={`[dependencies]
transitive = <bool>`}
  default_repr={`False`}
>

List all transitive dependencies. If unspecified, list direct dependencies only.

</Option>

## Advanced options

None

## Deprecated options

### `type`

<Option
  cli_repr={`--dependencies-type=<DependencyType>`}
  env_repr='PANTS_DEPENDENCIES_TYPE'
  toml_repr={`[dependencies]
type = <DependencyType>`}
  one_of='source, 3rdparty, source-and-3rdparty'
  default_repr={`source`}
  removal_version='2.9.0.dev0'
  removal_hint={'This option is misleading and not very useful. In the future there will be a more robust way of querying and filtering dependencies.<br />Meanwhile you can get the list of requirement strings for a set of targets using something like<br /><br />./pants dependencies :: \<br />| xargs ./pants filter --target-type=python_requirement \<br />| xargs ./pants peek | jq -r \'.[]["requirements"][]\'<br />'}
>

Which types of dependencies to list, where `source` means source code dependencies and `3rdparty` means third-party requirement strings.

</Option>

## Related subsystems

None

</span>
